--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
+rich = "*"
+importlib-metadata = {version = "^1.0", python = "<3.8"}
 
 
 [build-system]
