--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ version = "0.1.0"
 
 [tool.poetry.dependencies]
 rich = "*"
-importlib-metadata = {version = "^1.0", python = "<3.8"}
+importlib-metadata = {version = ">=1.0", python = "<3.8"}
 
 
 [build-system]
