--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -42,7 +42,7 @@ jobs:
         black --check .
     - name: Test with pytest
       run: |
-        pytest --cov-report=xml --cov=mypackage
+        pytest --cov-report=xml --cov=scvi-colab
     - name: After success
       run: |
         bash <(curl -s https://codecov.io/bash)
