--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,16 @@ version = "0.1.0"
 [tool.poetry.dependencies]
 rich = "*"
 importlib-metadata = {version = ">=1.0", python = "<3.8"}
+black = {version = ">=22.1", optional = true}
+codecov = {version = ">=2.0.8", optional = true}
+flake8 = {version = ">=3.7.7", optional = true}
+isort = {version = ">=5.7", optional = true}
+pre-commit = {version = ">=2.7.1", optional = true}
+pytest = {version = ">=4.4", optional = true}
+
+
+[tool.poetry.extras]
+dev = ["black", "pytest", "flake8", "codecov", "pre-commit", "isort"]
 
 
 [build-system]
