--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ flake8 = {version = ">=3.7.7", optional = true}
 isort = {version = ">=5.7", optional = true}
 pre-commit = {version = ">=2.7.1", optional = true}
 pytest = {version = ">=4.4", optional = true}
+python = ">=3.7,<4.0"
 
 
 [tool.poetry.extras]
