--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,10 @@ packages = [
   {include = "scvi_colab"},
 ]
 readme = "README.md"
-version = "0.5.1"
+version = "0.6.0"
 
 [tool.poetry.dependencies]
-rich = "==10.0.0"
+rich = "*"
 importlib-metadata = {version = ">=1.0", python = "<3.8"}
 black = {version = ">=22.1", optional = true}
 codecov = {version = ">=2.0.8", optional = true}
