--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ readme = "README.md"
 version = "0.7.0"
 
 [tool.poetry.dependencies]
-rich = "*"
+rich = "==10.0.0"
 importlib-metadata = {version = ">=1.0", python = "<3.8"}
 black = {version = ">=22.1", optional = true}
 codecov = {version = ">=2.0.8", optional = true}
