scvi-colab updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ profile = "black"
 skip_glob = ["docs/*", "scvi_colab/__init__.py"]
 
 [tool.poetry]
-authors = ["The scvi-tools development team <adamgayoso@berkeley.edu>"]
+authors = ["The scvi-tools development team <ori.kronfeld@weizmann.ac.il>"]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Science/Research",
   "Natural Language :: English",
-  "Programming Language :: Python :: 3.7",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Operating System :: POSIX :: Linux",
   "Topic :: Scientific/Engineering :: Bio-Informatics",
 ]
@@ -29,14 +29,14 @@ version = "0.12.0"
 
 [tool.poetry.dependencies]
 rich = "*"
-importlib-metadata = {version = ">=1.0", python = "<3.8"}
+importlib-metadata = {version = ">=1.0", python = "<3.13"}
 black = {version = ">=22.1", optional = true}
 codecov = {version = ">=2.0.8", optional = true}
 flake8 = {version = ">=3.7.7", optional = true}
 isort = {version = ">=5.7", optional = true}
 pre-commit = {version = ">=2.7.1", optional = true}
 pytest = {version = ">=4.4", optional = true}
-python = ">=3.7,<4.0"
+python = ">=3.10,<4.0"
 
 
 [tool.poetry.extras]
