--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ flake8 = {version = ">=3.7.7", optional = true}
 isort = {version = ">=5.7", optional = true}
 pre-commit = {version = ">=2.7.1", optional = true}
 pytest = {version = ">=4.4", optional = true}
+setuptools = {version = ">=75.0.0", optional = true}
 python = ">=3.10,<4.0"
 
 
