--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,12 +38,14 @@ isort = {version = ">=5.7", optional = true}
 pre-commit = {version = ">=2.7.1", optional = true}
 pytest = {version = ">=4.4", optional = true}
 setuptools = {version = ">=75.0.0", optional = true}
+pynndescent = {version = ">=0.5.11", optional = true}
+scanpy = {version = ">=1.10", optional = true}
 python = ">=3.10,<4.0"
 
 
 [tool.poetry.extras]
 dev = ["setuptools", "black", "pytest", "flake8", "codecov", "pre-commit", "isort",
-    "pytest-pretty", "coverage"]
+    "pytest-pretty", "coverage", "scanpy","pynndescent"]
 
 
 [build-system]
