--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,13 @@ requires-python = ">=3.10"
 
 [tool.poetry.dependencies]
 rich = "*"
-importlib-metadata = {version = ">=1.0", python = "<3.13"}
-black = {version = ">=22.1", optional = true}
+importlib-metadata = {version = ">=8.0.0", python = "<3.13"}
+black = {version = ">=24.1", optional = true}
 codecov = {version = ">=2.0.8", optional = true}
-flake8 = {version = ">=3.7.7", optional = true}
+flake8 = {version = ">=7.0.0", optional = true}
 isort = {version = ">=5.7", optional = true}
-pre-commit = {version = ">=2.7.1", optional = true}
-pytest = {version = ">=4.4", optional = true}
+pre-commit = {version = ">=4.0.0", optional = true}
+pytest = {version = ">=8.0.0", optional = true}
 setuptools = {version = ">=75.0.0", optional = true}
 pynndescent = {version = ">=0.5.11", optional = true}
 scanpy = {version = ">=1.10", optional = true}
@@ -51,6 +51,6 @@ dev = ["setuptools", "black", "pytest", "flake8", "codecov", "pre-commit", "isor
 [build-system]
 build-backend = "poetry.masonry.api"
 requires = [
-  "poetry>=1.0",
+  "poetry>=1.0,<2",
   "setuptools", # keep it here or "pip install -e" would fail
 ]
