--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
                       ${{ runner.os }}-pip-
             - name: Install dependencies
               run: |
+                  python -m pip install --upgrade pip wheel uv
                   pip install pytest-cov
                   pip install .[dev]
             - name: Lint with flake8
