--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,11 @@ jobs:
               with:
                   poetry-version: 1.1.11
 
+            - name: Install dependencies
+              run: |
+                  pip install six
+                  poetry install
+
             - name: Build project for distribution
               run: poetry build
 
