--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ packages = [
 ]
 readme = "README.md"
 version = "0.13.0"
-requires-python = ">=3.10"
+#requires-python = ">=3.10"
 
 [tool.poetry.dependencies]
 rich = "*"
