--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ packages = [
 ]
 readme = "README.md"
 version = "0.13.0"
-requires-python = ">=3.10"
+#requires-python = ">=3.10"
 
 [tool.poetry.dependencies]
 rich = "*"
@@ -40,7 +40,7 @@ pytest = {version = ">=8.0.0", optional = true}
 setuptools = {version = ">=75.0.0", optional = true}
 pynndescent = {version = ">=0.5.11", optional = true}
 scanpy = {version = ">=1.10", optional = true}
-python = ">=3.10,<4.0"
+python = "^3.12"
 
 
 [tool.poetry.extras]
