--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ pytest = {version = ">=8.0.0", optional = true}
 setuptools = {version = ">=75.0.0", optional = true}
 pynndescent = {version = ">=0.5.11", optional = true}
 scanpy = {version = ">=1.10", optional = true}
-python = ">=^3.10,<^4.0"
+python = ">=3.10,<4.0"
 
 
 [tool.poetry.extras]
